--- a/views/addEmployee.hbs
+++ b/views/addEmployee.hbs
@@ -90,7 +90,7 @@
                                         <input type="radio" id="statusFT" name="status" value="Full Time" /> Full Time
                                     </label>
                                     <label class="checkbox-inline">
-                                        <input type="radio" id="statusFT" name="status" value="Part Time" /> Part Time
+                                        <input type="radio" id="statusPT" name="status" value="Part Time" /> Part Time
                                     </label>
                                 </div>
                             </div>
