--- a/views/addEmployee.hbs
+++ b/views/addEmployee.hbs
@@ -87,10 +87,10 @@
                                 <div class="form-group">
                                     <label>Status:</label><br />
                                     <label  class="checkbox-inline">
-                                        <input type="radio" id="statusFT" name="status" value="Full Time" /> Full Time
+                                        <input type="radio" id="fullTime" name="status" value="Full Time" /> Full Time
                                     </label>
                                     <label class="checkbox-inline">
-                                        <input type="radio" id="statusPT" name="status" value="Part Time" /> Part Time
+                                        <input type="radio" id="partTime" name="status" value="Part Time" /> Part Time
                                     </label>
                                 </div>
                             </div>
